--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="keyword" content="" />
+		<meta name="description" content="" />
+		<meta name="author" content="" />
+		<title>Herodotus | Home</title>
+		<script src="./src/js/index.js" defer type="module"></script>
+	</head>
+	<body>
+		<nav id="nav--top"></nav>
+		<header></header>
+		<main></main>
+		<nav id="nav-bot"></nav>
+	</body>
 </html>
