addd fontawasome and css file

--- a/index.html
+++ b/index.html
@@ -8,12 +8,23 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 		<title>Herodotus | Home</title>
+		<link rel="stylesheet" href="./public/css/main.css" />
 		<script src="./src/js/index.js" defer type="module"></script>
+		<script
+			src="https://kit.fontawesome.com/6b4917e13e.js"
+			crossorigin="anonymous"
+		></script>
 	</head>
 	<body>
-		<nav id="nav--top"></nav>
+		<nav
+			id="nav--top"
+			class="navbar sticky-top navbar-light bg-primary p-3"
+		></nav>
 		<header></header>
 		<main></main>
-		<nav id="nav-bot"></nav>
+		<nav
+			id="nav-bot"
+			class="navbar fixed-bottom navbar-light bg-primary p-3"
+		></nav>
 	</body>
 </html>
