--- a/index.html
+++ b/index.html
@@ -18,13 +18,131 @@
 	<body>
 		<nav
 			id="nav--top"
-			class="navbar sticky-top navbar-light bg-primary p-3"
+			class="navbar sticky-top navbar-light bg-primary p-3 justify-content-center"
 		></nav>
 		<header></header>
 		<main></main>
 		<nav
 			id="nav-bot"
-			class="navbar fixed-bottom navbar-light bg-primary p-3"
+			class="navbar fixed-bottom navbar-light bg-primary p-3 justify-content-center"
 		></nav>
+		<!--Model Box -->
+		<div
+			class="modal"
+			id="modal-login"
+			tabindex="-1"
+			role="dialog"
+			aria-labelledby="modal-login"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+					<div class="modal-body">
+						<div>
+							<div class="d-flex justify-content-end">
+								<button
+									type="button"
+									class="btn"
+									data-dismiss="modal"
+									aria-label="Close"
+								>
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="d-flex justify-content-center">
+								<h3>LOGIN</h3>
+							</div>
+						</div>
+						<form action="" id="form-login">
+							<div class="form-group">
+								<label for=""></label>
+								<input
+									type="email"
+									class="form-control"
+									id="form-login__email"
+									placeholder="Enter email"
+									required
+								/>
+								<small class="form-text text-muted"
+									>!Import Note: you need a noroff.no or
+									student.norroff.no</small
+								>
+							</div>
+							<div class="form-group">
+								<label for="form-login__password"></label>
+								<input
+									type="password"
+									name="password"
+									class="form-control"
+									id="form-login__password"
+									required
+								/>
+							</div>
+							<div class="d-flex justify-content-between pt-3">
+								<button type="submit" class="btn btn-primary">Login</button>
+								<button
+									type="button"
+									class="btn btn-primary"
+									data-dismiss="modal"
+									aria-label="Close"
+									class="btn"
+								>
+									Close
+								</button>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Modal Register User -->
+		<div
+			class="modal"
+			id="modal-register"
+			tabindex="-1"
+			role="dialog"
+			aria-label="modal-register"
+			aria-hidden="true"
+		>
+			<div class="modal-dialog modal-dialog-centered" role="document">
+				<div class="modal-content">
+					<div class="modal-body">
+						<div>
+							<div class="d-flex justify-content-end">
+								<button
+									type="button"
+									class="btn"
+									data-dismiss="modal"
+									aria-label="Close"
+								>
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+							<div class="d-flex justify-content-center">
+								<h3>REGISTER USER</h3>
+							</div>
+						</div>
+						<form action="" id="form-register">
+							<div class="form-group"></div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script
+			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+			integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+			integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+			crossorigin="anonymous"
+		></script>
+		<script
+			src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+			integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+			crossorigin="anonymous"
+		></script>
 	</body>
 </html>
