--- a/index.html
+++ b/index.html
@@ -123,7 +123,54 @@
 							</div>
 						</div>
 						<form action="" id="form-register">
-							<div class="form-group"></div>
+							<div class="form-group">
+								<label for="name"></label>
+								<input
+									type="name"
+									name="name"
+									id="form-register__name"
+									class="form-control"
+									placeholder="name"
+								/>
+							</div>
+							<div class="form-group">
+								<label for="email"></label>
+								<input
+									type="email"
+									name="email"
+									id="form-register__email"
+									class="form-control"
+									placeholder="Email"
+								/>
+								<small
+									>!Import Note: you need a noroff.no or
+									student.norroff.no</small
+								>
+							</div>
+							<div class="form-group">
+								<label for="password"></label>
+								<input
+									type="password"
+									name="password"
+									id="form-register__pwd"
+									class="form-control"
+									placeholder="password"
+								/>
+							</div>
+							<div class="d-flex justify-content-between pt-3">
+								<div class="d-flex justify-content-between pt-3">
+									<button type="submit" class="btn btn-primary">Login</button>
+									<button
+										type="button"
+										class="btn btn-primary"
+										data-dismiss="modal"
+										aria-label="Close"
+										class="btn"
+									>
+										Close
+									</button>
+								</div>
+							</div>
 						</form>
 					</div>
 				</div>
