adding search nav

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 			id="nav--top"
 			class="navbar sticky-top navbar-light bg-primary p-3 justify-content-center"
 		></nav>
+		<nav id="nav-search" class="invisible">
+			<form action="">
+				<input type="search" />
+			</form>
+		</nav>
 		<header></header>
 		<main></main>
 		<nav
