--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<button type="button" class="btn btn-primary">test</button>
 			</div>
 		</div>
-		<header>test test</header>
+		<header></header>
 		<main></main>
 		<nav
 			id="nav-bot"
